--- a/Mainfile.Rmd
+++ b/Mainfile.Rmd
@@ -14,12 +14,18 @@ library(tidyr)
 library(xgboost)
 library(tidymodels)
 library(mice)
+library(haven)
 
 ```
 
+
+#data exploration
 ```{r data exploration}
 df_mgus <- survival::mgus2 %>% 
-  select(age,dxyr,hgb,creat,mspike,pstat)
+  dplyr::select(age,dxyr,hgb,creat,mspike,pstat)
+
+sapply(df_mgus,sd)
+
 
 #distribution of data
 par(mfrow = c(2,3))
@@ -37,10 +43,8 @@ boxplot(dxyr~pstat, ylab = "Year Diagnosed", xLab = "Progression to PCM", col = 
 
 ```
 
-```{r}
 
-```
-
+#XGBoost Model
 
 ```{r}
 set.seed(123)
@@ -154,7 +158,8 @@ final_res %>%
     size = 1.2
   )
 
-#Plot metrics
+
+#Visuals
 library(runway)
 final_res %>%
   collect_predictions() %>% 
@@ -179,42 +184,28 @@ final_res %>%
 ```
 
 
+#regression model
+
 ```{r}
-library(caret)
-library(tidymodels)
-library(dplyr)
 set.seed(123)
-mgus_lg_df <- complete(mice(mgus2, m=1, maxit = 50, method = 'pmm', seed = 500),1) 
-mgus_lg_df <- subset(mgus_lg_df, select = -c(death, futime, ptime, id)) %>% 
+mgus_df_lg <- complete(mice(mgus2, m=1, maxit = 50, method = 'pmm', seed = 500),1)
+mgus_split_lg <- mgus_df_lg %>% 
+  dplyr::select(-futime,-death,-id,-ptime) %>% 
   initial_split(., strata = pstat)
-mgus_lg_df
-lg.train <- training(mgus_lg_df)
-lg.test <- testing(mgus_lg_df)
+mgus_train_lg <- read.csv("mgus_custom_data_glm.csv") %>% 
+  dplyr::select(-X,-Unnamed..0)
+mgus_test_lg <- testing(mgus_split)
 
-#lg.train$age_bucket <- as.factor(ifelse(lg.train$age<=40,1,
-                                      #  ifelse(lg.train$age<=60,2,
-                                          #     ifelse(lg.train$age<=80,3,4))))
+lg.train <- mgus_train_lg
+lg.test <- mgus_test_lg
 
-#lg.test$age_bucket <- as.factor(ifelse(lg.test$age<=40,1,
-                                        #ifelse(lg.test$age<=60,2,
-                                         #      ifelse(lg.test$age<=80,3,4))))
 
-```
-
-```{r}
-#library(MASS)
-#model_glm = glm(pstat ~., data = lg.train, family = "binomial")
-#summary(model_glm)
-#model_2 <- stepAIC(model_glm)
-#summary(model_2)
-#summary(model_2$fitted.values)
-#hist(model_2$fitted.values,main = " Histogram ",xlab = "Probability of '1' pstat", col = 'light green')
 ```
 
 ```{r}
 library(pROC)
 library(runway)
-model <- glm(pstat~ age + hgb+ mspike, data = lg.train, family = "binomial",control = list(maxit = 100 ))
+model <- glm(pstat~ age + hgb+ mspike + dxyr, data = lg.train, family = "binomial",control = list(maxit = 100 ))
 prob <- predict(model, lg.test, type = "response")
 
 predicted.outcomes <- ifelse(prob > 0.5, 1, 0)
